<resources>
    <string name="app_name">GrietBookβ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_heading">Login</string>
    <string name="register_heading">Register</string>
    <string name="firebase_heading">GrietBook β</string>
    <string name="new_user">New User?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="forgot_password_toast">Under Development..But you can call me and I will reset it</string>
    <string name="verificationNotice">You haven\'t Verified your account.\nVerification secures your account in case you forget your password.\n\nPlease Verify!</string>
    <string name="phoneLabel">Phone:</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
