<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aditya.firebaseuser.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="@string/login_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLoginHeading"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_margin="8dp"
        android:textStyle="normal|bold"
        android:fontFamily="monospace" />
    <TextView
        android:text="@string/firebase_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFireBaseHeading"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewLoginHeading"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_margin="8dp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="monospace"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp"
        android:layout_below="@id/textViewFireBaseHeading">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:background="#fff"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:hint="Email ID"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:hint="Password"
            android:background="#fff"
            android:layout_margin="8dp"
            android:padding="8dp"
            />

        <Button
            android:text="Log In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNewUser"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewForgotPassword"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
